# JPEG-Compression

./: .gitignore  README.md  pyproject.toml  task.ipynb
docs/: developer_guide.md  documentation.md
jpegzip/: main.py
jpegzip/algorithms/: jpeg_compression.py
jpegzip/compression/: image_compression.py  jpeg_compression.py  video_compression.py
jpegzip/misc/: image_compression_sample.py
jpegzip/utils/: file_system.py  image.py  plots.py
tests/: test_block.py  test_conversion.py  test_iblock.py  test_padding.py  test_sample.py
