[project]

name = "jpegzip"
version = "0.0.1"
authors = [
  { name="Adrian Mincu", email="mincu.adrian13@gmail.com" },
]

# TODO: project description
description = ""
readme = "README.md"

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy~=2.1',
    'scipy~=1.14',
    'matplotlib~=3.9',
    'pooch~=1.8'
]

[project.optional-dependencies]
dev = [
    'pytest~=8.3',
    'black~=24.10',
    'isort~=5.13',
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = [
    "tests",
    "integration",
]

[project.urls]
Homepage = "https://github.com/skpha13/JPEG-Compression"
Issues = "https://github.com/skpha13/JPEG-Compression/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"